# TriggerGameCompose

./: CONTRIBUTING.md  README.md  docker-compose.yml
game_server/rust_app/: Cargo.toml
game_server/rust_app/src/: application.rs  infrastructure.rs  main.rs
game_server/rust_app/src/application/: game.rs  matchmaking.rs  websocket.rs
game_server/rust_app/src/application/game/: enemy_unit_dto.rs  friend_unit_dto.rs  get_game_state_usecase.rs  process_turn_usecase.rs  turn_action_dto.rs
game_server/rust_app/src/application/matchmaking/: matchmaking_application_service.rs  matchmaking_dto.rs
game_server/rust_app/src/application/websocket/: websocket_request.rs  websocket_response.rs  websocket_sender.rs
game_server/rust_app/src/domain/: triggergame_simulator.rs
game_server/rust_app/src/domain/matching_management/: models.rs  repositories.rs
game_server/rust_app/src/domain/player_management/: models.rs  repositories.rs
game_server/rust_app/src/domain/triggergame_simulator/: configs.rs  models.rs  repositories.rs
game_server/rust_app/src/domain/unit_management/: models.rs  repositories.rs
game_server/rust_app/src/infrastructure/: aws.rs  dynamodb.rs
game_server/rust_app/src/infrastructure/aws/: apigateway_client.rs  dynamodb_client.rs  websocketapi_sender.rs
game_server/rust_app/src/infrastructure/dynamodb/: connection_dynamodb_repository.rs  connection_dynamodb_repository_test.rs  game_dynamodb_repository.rs  game_dynamodb_repository_test.rs  test_utils.rs  (+8 more)
lambda_server/rust_app/: Cargo.toml
lambda_server/rust_app/src/: domain.rs  main.rs
(+292 files in other folders)
