[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.12"
aws-sdk-apigatewaymanagement = "1.91.0"
lambda_runtime = "1.0.2"
serde = "1.0.136"
serde_json = "1.0.147"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
chrono = "0.4.42"
aws-sdk-dynamodb = "1.101.0"
async-trait = "0.1.89"
aws-smithy-mocks = "0.2.2"
aws-credential-types = "1.2.11"
rand = "0.9.2"

# 警告の抑制設定
[lints.rust]
dead_code = "allow"           # 未使用コード
unused_variables = "allow"    # 未使用変数
unused_imports = "allow"      # 未使用インポート
