[package]
name = "lambda_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.12"
aws-sdk-apigatewaymanagement = "1.91.0"
lambda_runtime = "1.0.2"
serde = "1.0.136"
serde_json = "1.0.147"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
chrono = "0.4.42"
